fix sending usb report bug

--- a/sfhss-study.ioc
+++ b/sfhss-study.ioc
@@ -175,11 +175,12 @@ USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CUSTOMHID
 USB_DEVICE.CONFIGURATION_STRING_CUSTOMHID_FS=S-FHSS Joystick
 USB_DEVICE.INTERFACE_STRING_CUSTOMHID_FS=S-FHSS Joystick interface
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,MANUFACTURER_STRING,PRODUCT_STRING_CUSTOMHID_FS,CONFIGURATION_STRING_CUSTOMHID_FS,INTERFACE_STRING_CUSTOMHID_FS
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,MANUFACTURER_STRING,PRODUCT_STRING_CUSTOMHID_FS,CONFIGURATION_STRING_CUSTOMHID_FS,INTERFACE_STRING_CUSTOMHID_FS,USBD_SELF_POWERED
 USB_DEVICE.MANUFACTURER_STRING=opiopan@gmail.com
 USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=S-FHSS HID device
-USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=6
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=7
 USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=37
+USB_DEVICE.USBD_SELF_POWERED=0
 USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
