change IDE from SystemWorkbench to vscode

--- a/sfhss-study.ioc
+++ b/sfhss-study.ioc
@@ -122,9 +122,9 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=sfhss-study.ioc
 ProjectManager.ProjectName=sfhss-study
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=SW4STM32
+ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
+ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
@@ -175,11 +175,13 @@ USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CUSTOMHID
 USB_DEVICE.CONFIGURATION_STRING_CUSTOMHID_FS=S-FHSS Joystick
 USB_DEVICE.INTERFACE_STRING_CUSTOMHID_FS=S-FHSS Joystick interface
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,MANUFACTURER_STRING,PRODUCT_STRING_CUSTOMHID_FS,CONFIGURATION_STRING_CUSTOMHID_FS,INTERFACE_STRING_CUSTOMHID_FS,USBD_SELF_POWERED
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,MANUFACTURER_STRING,PRODUCT_STRING_CUSTOMHID_FS,CONFIGURATION_STRING_CUSTOMHID_FS,INTERFACE_STRING_CUSTOMHID_FS,USBD_SELF_POWERED,SERIALNUMBER_STRING_CUSTOMHID_FS,PID_CUSTOMHID_FS
 USB_DEVICE.MANUFACTURER_STRING=opiopan@gmail.com
+USB_DEVICE.PID_CUSTOMHID_FS=22353
 USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=S-FHSS HID device
-USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=7
-USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=37
+USB_DEVICE.SERIALNUMBER_STRING_CUSTOMHID_FS=00000000001B
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=9
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=41
 USB_DEVICE.USBD_SELF_POWERED=0
 USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
