--- a/sfhss-study.ioc
+++ b/sfhss-study.ioc
@@ -110,7 +110,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F042K6Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.9.0
 ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
+ProjectManager.HalAssertFull=true
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
